# Venaja-2024-Hack

./: LICENSE  README.md  debug_email.txt  mailSender.py  mailServer.py  pyproject.toml  requirements.txt  start_ttk_bot.py  ttk_bot.py  ~$метки на полях.docx  Заметки на полях.docx
Voise-2-text/: Voice-2-text.py
Voise2text/: VoiceToText.py
bot/: pyvenv.cfg
bot/Scripts/: activate
bot/Wants/: WantsTableCreator.py  funct.py  mailSender.py  my_database.db  razmetka.py  test.py
db/: Main_DB  Main_DB.db  Main_DB.sqlite3  Temp.py  add.py  back 2.0.py  back 2.0_TeleDrop.py  back.py  data_base.py  data_base_managment.py  Диаграмма без названия.drawio
web-app/: app.py  forms.py  test.py
web-app/redactoweb/: manage.py
web-app/redactoweb/redactoweb/: asgi.py  settings.py  urls.py  wsgi.py
web-app/static/css/: styles.css
web-app/templates/: admin.html  auth.html  index.html  redact.html
