[project]
name = "venaja-2024-hack"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tretchian", email = "safonovila7@gmail.com" }
]
dependencies = [
    "aiosmtpd>=1.4.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/venaja_2024_hack"]
